# SDV_UN_ROS2

./: .gitignore  README.md  frames_2025-11-26_16.20.20.gv  frames_2025-11-26_16.21.51.gv  frames_2025-11-28_09.20.51.gv  frames_2025-11-28_09.53.19.gv  frames_2025-11-28_09.57.29.gv  frames_2025-12-01_15.32.50.gv  frames_2025-12-01_15.41.47.gv  frames_2025-12-01_15.48.46.gv  frames_2025-12-01_15.49.38.gv  frames_2025-12-01_15.50.43.gv  frames_2025-12-01_18.04.19.gv
SDVSerialCommunication/: README.md  platformio.ini
SDVSerialCommunication/lib/Battery/: Battery.cpp  Battery.h
SDVSerialCommunication/lib/Encoder/: Encoder.cpp  Encoder.h
SDVSerialCommunication/lib/Motor/: EsconMotor.cpp  EsconMotor.h  FourDriveController.cpp  FourDriveController.h  Motor.cpp  Motor.h  PololuMotor.cpp  PololuMotor.h  TwoDriveController.cpp  TwoDriveController.h  motor_model.h  tools.h
SDVSerialCommunication/lib/SensorUpdater/: SensorUpdater.cpp  SensorUpdater.h
SDVSerialCommunication/lib/TimeWatcherTasks/: TimeWatcherTask.cpp  TimeWatcherTasks.h
SDVSerialCommunication/src/: main.cpp  tiva_pins.h
install/: local_setup.sh  setup.sh
install/sdv_msgs/share/ament_index/resource_index/package_run_dependencies/: sdv_msgs
install/sdv_msgs/share/ament_index/resource_index/parent_prefix_path/: sdv_msgs
install/sdv_msgs/share/sdv_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/sdv_msgs/share/sdv_msgs/cmake/: sdv_msgsConfig-version.cmake  sdv_msgsConfig.cmake
install/sdv_msgs/share/sdv_msgs/environment/: ament_prefix_path.dsv  path.dsv
install/sdv_serial/lib/sdv_serial/: sdv_serial_node
install/sdv_serial/share/ament_index/resource_index/package_run_dependencies/: sdv_serial
install/sdv_serial/share/ament_index/resource_index/parent_prefix_path/: sdv_serial
install/sdv_serial/share/sdv_serial/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/sdv_serial/share/sdv_serial/cmake/: sdv_serialConfig-version.cmake  sdv_serialConfig.cmake
install/sdv_serial/share/sdv_serial/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build  latest_list
src/Sick_scan_xd/: CMakeLists.txt
src/Sick_scan_xd/driver/src/: sick_scan_common.cpp
src/Sick_scan_xd/launch/: sick_nav_350.launch  sick_nav_350.launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build  latest_list
src/sdv_controller/: CMakeLists.txt  package.xml
src/sdv_controller/include/sdv_controller/: motor.h
src/sdv_controller/src/: motor.cpp  sdv_controller.cpp  sdv_controller_node.cpp
src/sdv_msgs/: CMakeLists.txt
src/sdv_nav/: package.xml  setup.cfg  setup.py
src/sdv_nav/config/: amcl_params.yaml  controller_params.yaml  nav2_params.yaml
src/sdv_nav/launch/: sdv_nav.launch.py
src/sdv_planner/: CMakeLists.txt  a_star_planner_plugin.xml  package.xml
src/sdv_planner/include/sdv_planner/: a_star_planner.hpp
src/sdv_planner/src/: a_star_planner.cpp  a_star_planner_plugin.cpp
src/sdv_pruebas/: package.xml  setup.cfg  setup.py
src/sdv_pruebas/sdv_pruebas/: sdv_pruebas.py  sdv_scan_matcher.py  sdv_translate.py
src/sdv_scan_matcher/: CMakeLists.txt  package.xml
src/sdv_scan_matcher/src/: sdv_scan_matcher.cpp
src/sdv_serial/: CMakeLists.txt
src/sdv_serial/src/: sdv_serial_node.cpp
src/sdv_sim/: CMakeLists.txt  package.xml
src/sdv_sim/launch/: sdv_sim.launch.py
src/sdv_sim/models/labfabex_walls/: model.config  model.sdf
src/sdv_sim/models/labfabex_walls/meshes/: labfabex_walls.dae
src/sdv_sim/models/sdvun/common/meshes/: drawer.dae  flexiforce_platform.dae  laser.dae  power_panel.dae  wheel.dae
src/sdv_sim/models/sdvun/sdvun1/meshes/: collision.dae
src/sdv_sim/models/sdvun/sdvun2/meshes/: base.dae  collision.dae
src/sdv_sim/models/sdvun/sdvun3/: model.config  model.sdf
src/sdv_sim/models/sdvun/sdvun3/meshes/: base.dae  collision.dae
src/sdv_sim/worlds/: empty.sdf  labfabex_world.sdf
src/sdv_sim/xacro/: sdv_description.xacro
src/sdv_tracking/: CMakeLists.txt  package.xml
src/sdv_tracking/include/sdv_tracking/: pure_pursuit.hpp
src/sdv_tracking/src/: pure_pursuit.cpp
