<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdv_controller</name>
  <version>0.0.0</version>
  <description>Controller node for SDV (example robot)</description>
  <maintainer email="antorresca@unal.edu.co">antorresca</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime + build dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
